--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ MarkupSafe==1.1.1
 pyrsistent==0.17.3
 python-decouple==3.3
 pytz==2021.1
-PyYAML==5.3.1
+PyYAML>=5.4
 requests==2.25.1
 six==1.15.0
 typing-extensions==3.7.4.3
