--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ attrs==20.3.0
 certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
-Flask==1.1.2
+flask>=2.2.5
 flask-restx==0.2.0
 idna==2.10
 importlib-metadata==3.4.0
